separate login page

--- a/try/index.html
+++ b/try/index.html
@@ -27,32 +27,8 @@
 		</center>
 	</div>
 	
-		<div style="padding: 0% 20%;">
-		    <p class="h4 mb-4">Login</p>
-		    <!-- Name -->
-		    <input type="text" ng-model="phone"  class="form-control mb-4" placeholder="phone">
 
-		    <!-- Email -->
-		    <input type="password" ng-model="password" class="form-control mb-4" placeholder="password">
-
-		    <!-- Sign in button -->
-
-		    <button class="btn btn-info btn-block" ng-click="postdata(phone,password)" type="submit"> Sign in</button>
-	    </div>
-
-	    <p>return object : {{dataHere}}</p>
-	    <br>
-	    <p>return 0th userid : {{userid}}</p>
-	    
-	    <p>Output Message : {{msg}}</p>
-
-		<p>StatusCode: {{statusval}}</p>
-
-		<p>Status: {{statustext}}</p>
-
-		<p>Response Headers: {{headers}}</p>
-
-	<!-- <div ng-view></div> -->
+	<div ng-view></div>
 
 <!-- JQuery -->
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
