--- a/try/index.html
+++ b/try/index.html
@@ -8,6 +8,7 @@
 	<script type="text/javascript" src="js/app.js"></script>
 	<script type="text/javascript" src="js/controllers/myCtrl.js"></script>
 
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<!-- Font Awesome -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
 	<!-- Bootstrap core CSS -->
@@ -17,7 +18,7 @@
 
 </head>
 
-<body ng-app="myApp" ng-controller="myCtrl">
+<body ng-app="myApp">
 
 	<div class="container">
 		<center>
