--- a/task/index.html
+++ b/task/index.html
@@ -42,7 +42,7 @@
     </div>
     
     <div id="controls">
-  	 <button onclick="startRecording()">Record</button>
+  	 <button onclick="startRecordingNow()">Record</button>
 <!--   	 <button id="pauseButton" disabled>Pause</button>
   	 <button id="stopButton" disabled>Stop</button> -->
     </div>
