--- a/task/index.html
+++ b/task/index.html
@@ -43,8 +43,7 @@
     
     <div id="controls">
   	 <button onclick="startRecordingNow()">Record</button>
-<!--   	 <button id="pauseButton" disabled>Pause</button>
-  	 <button id="stopButton" disabled>Stop</button> -->
+     <button onclick="stopRecordingNow()">STOP</button>
     </div>
     
     <div id="formats">Format: start recording to see sample rate</div>
