--- a/states/index.html
+++ b/states/index.html
@@ -26,6 +26,8 @@
             <li><a ui-sref="home">Home</a></li>
             <li><a ui-sref="about">About</a></li>
             <li><a ui-sref="contacts">contacts</a></li>
+            <li><a ui-sref="controller">controller</a></li>
+            <!-- <li><a ui-sref="contacts({param1: })">View Contacts</a></li> -->
         </ul>
     </nav>
 
